feat: Allow each individual mount config and serve config entry to override its own env vars

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,5 @@
 services:
   rclone-manager:
-    image: ipromknight/rclone-manager:latest
     container_name: rclone-manager
     restart: unless-stopped
     stop_signal: SIGTERM
@@ -22,15 +21,18 @@ services:
     environment:
       # General
       RCLONE_BUFFER_SIZE: 0
-      RCLONE_BWLIMIT: 100M
+      RCLONE_BWLIMIT: off
       RCLONE_BIND: 0.0.0.0
-      RCLONE_LOG_LEVEL: INFO
+      RCLONE_LOG_LEVEL: Info
       RCLONE_CACHE_DIR: /caches/rclone
       RCLONE_DIR_CACHE_TIME: 10s
       RCLONE_TIMEOUT: 10m
       RCLONE_UMASK: 002
       RCLONE_UID: 1000
       RCLONE_GID: 1000
+      RCLONE_LINKS: true
+      RCLONE_MULTI_THREAD_STREAMS: 1
+      RCLONE_TRANSFERS: 1
       RCLONE_ALLOW_NON_EMPTY: "true"
       RCLONE_ALLOW_OTHER: "true"
       RCLONE_CONFIG: /data/rclone.conf
@@ -42,12 +44,9 @@ services:
       RCLONE_RC_WEB_GUI_NO_OPEN_BROWSER: "true"
 
       # VFS DEFAULTS
-      RCLONE_VFS_MIN_FREE_SPACE: off
-      RCLONE_VFS_CACHE_MAX_AGE: 24h
-      RCLONE_VFS_MAX_CACHE_SIZE: 100G
       RCLONE_VFS_CACHE_MODE: writes
-      RCLONE_VFS_READ_CHUNK_LIMIT: 64M
-      RCLONE_VFS_READ_CHUNK_SIZE: 5M
+      RCLONE_VFS_READ_CHUNK_SIZE: 10M
+      RCLONE_VFS_READ_CHUNK_SIZE_LIMIT: 10M
 
       # MOUNT DEFAULTS
       RCLONE_NO_TRAVERSE: "true"
