--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   IMAGE_NAME: ipromknight/rclone-manager
+  DOCKERHUB_USERNAME: ipromknight
 
 jobs:
   execution:
@@ -28,7 +29,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
